force-app/main/default/objects/JMS_Territory_Assignment__c/JMS_Territory_Assignment__c.object-meta.xml
<CustomObject>
    <description>This will store the copy of the ObjectTerritory2Association records.</description>
    <label>Territory Assignment</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Territory Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>