force-app/main/default/objects/JMS_Territory_Assignment__c/fields/JMS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Account_ID__c</fullName>
    <description>It will store Account Id.</description>
    <label>Account ID</label>
    <length>240</length>
    <type>Text</type>
</CustomField>