force-app/main/default/objects/JMS_Territory_Assignment__c/fields/JMS_TerritoryID__c.field-meta.xml
<CustomField>
    <fullName>JMS_TerritoryID__c</fullName>
    <description>It will store TerritoryID.</description>
    <label>TerritoryID</label>
    <length>240</length>
    <type>Text</type>
</CustomField>