force-app/main/default/objects/JMS_Territory_Assignment__c/fields/JMS_TerritoryName__c.field-meta.xml
<CustomField>
    <fullName>JMS_TerritoryName__c</fullName>
    <label>TerritoryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>