force-app/main/default/objects/JMS_Territory_Assignment__c/fields/JMS_ZipCodeAssignment__c.field-meta.xml
<CustomField>
    <fullName>JMS_ZipCodeAssignment__c</fullName>
    <description>It will store zipcode value.</description>
    <label>ZipCode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>